RESOLVED FIXED150901
Fix crashing and flaky UIScriptController-based tests in fast/events/ios
https://bugs.webkit.org/show_bug.cgi?id=150901
Summary Fix crashing and flaky UIScriptController-based tests in fast/events/ios
Wenson Hsieh
Reported 2015-11-04 13:31:53 PST
Fix crashing and flaky tests in LayoutTests/fast/events/ios. One of the main causes of our crashes is that zooming and keyboard callbacks that have been set by previous tests are not cleared before running the next test, so code from the previous test may be executed during the next test if the test does not set the callback to something else. This causes us to access the previous deallocated UIScriptController and crash.
Attachments
Patch (10.71 KB, patch)
2015-11-04 13:57 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2015-11-04 13:39:44 PST
Wenson Hsieh
Comment 2 2015-11-04 13:57:22 PST
WebKit Commit Bot
Comment 3 2015-11-04 15:35:41 PST
Comment on attachment 264810 [details] Patch Clearing flags on attachment: 264810 Committed r192039: <http://trac.webkit.org/changeset/192039>
WebKit Commit Bot
Comment 4 2015-11-04 15:35:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.